# distributed-computation-demo

./: Cargo.toml
common/: Cargo.toml
common/src/: constants.rs  keys.rs  lib.rs  models.rs  task_manager.rs
master/: Cargo.toml
master/src/: lib.rs  main.rs  producer.rs
master/src/api/: routes.rs
master/src/app/: mod.rs  problem_generator.rs  producer.rs  supervisor.rs  task_manager.rs  utils.rs
worker/: .env.example  Cargo.toml
worker/src/: client.rs  lib.rs  main.rs  worker.rs
