[workspace]
members = ["common", "master", "worker"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
anyhow = "1"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0.9"
serde = { version = "1.0.217", features = ["derive"] }
dotenv = "0.15.0"
envy = "0.4.2"
redis = { version = "0.23", features = ["tokio-comp"] }
