[package]
name = "master"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
actix-web = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11.6"
chrono = "0.4.39"
rand = "0.9.0"
log = { workspace = true }