[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }
dotenv = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
log = "0.4.22"
env_logger = "0.11.6"
uuid.workspace = true
serde_json = "1.0.139"
chrono = "0.4.39"
rand = "0.9.0"
